fix dark mode transition

--- a/tribute-page/style.css
+++ b/tribute-page/style.css
@@ -56,6 +56,7 @@ body {
     overflow-x: hidden;
     background-color: var(--backgroundColor);
     font-family: "Poppins", sans-serif;
+    transition: 0.3s background-color;
 }
 
 ::selection {
